--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "pymc_statespace", from="src"}]
 
 [tool.poetry.dependencies]
-python = "^3.10.6"
+python = ">=3.10, <3.11"
 numpy = "^1.24.3"
 pandas = "^2.0.1"
 scikit-learn = "^1.2.2"
@@ -18,6 +18,9 @@ ipykernel = "^6.25.2"
 statsmodels = "^0.14.0"
 orbit-ml = "^1.1.4.2"
 graphviz = "^0.20.1"
+causalpy = "^0.1.1"
+tfcausalimpact = "^0.0.13"
+tensorflow = "^2.13.0"
 
 
 [tool.poetry.group.dev.dependencies]
