--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ graphviz = "^0.20.1"
 causalpy = "^0.1.1"
 tfcausalimpact = "^0.0.13"
 tensorflow = "^2.13.0"
+pandas-datareader = "^0.10.0"
 
 
 [tool.poetry.group.dev.dependencies]
