added doubleML as a dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pandas-datareader = "^0.10.0"
 statsforecast = "^1.6.0"
 sts-jax = {git = "https://github.com/probml/sts-jax"}
 ortools = "^9.8.3296"
+doubleml = "^0.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
