--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ ipywidgets = "^8.0.6"
 jupytext = "^1.14.5"
 jupyter = "^1.0.0"
 pre-commit = "^3.3.2"
+pymc = "^5.10.3"
 
 [build-system]
 requires = ["poetry-core"]
