--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ statsforecast = "^1.6.0"
 sts-jax = {git = "https://github.com/probml/sts-jax"}
 ortools = "^9.8.3296"
 doubleml = "^0.7.0"
+pyro-ppl = "^1.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
