--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ sts-jax = {git = "https://github.com/probml/sts-jax"}
 ortools = "^9.8.3296"
 doubleml = "^0.7.0"
 pyro-ppl = "^1.9.0"
+tensorflow-probability = "^0.24.0"
+tf-keras = "^2.17.0"
 
 
 [tool.poetry.group.dev.dependencies]
