--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,6 +94,7 @@ dependencies = [
     "pyro-ppl<2.0.0,>=1.9.0",
     "tensorflow-probability<1.0.0,>=0.24.0",
     "tf-keras<3.0.0,>=2.17.0",
+    "jax>=0.4.35",
 ]
 name = "pymc_statespace"
 version = "0.1.0"
