--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ dependencies = [
     "tensorflow-probability<1.0.0,>=0.24.0",
     "tf-keras<3.0.0,>=2.17.0",
     "jax>=0.4.35",
+    "polars>=1.19.0",
 ]
 name = "pymc_statespace"
 version = "0.1.0"
